--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     testCompileOnly 'org.projectlombok:lombok:1.18.34'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.3.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.1'
+    implementation 'org,postgresql:postgresql:42.7.3'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
