--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
+    driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: postgres
@@ -8,3 +9,5 @@ spring:
     show_sql: true
     use_sql_comments: true
     format_sql: true
+    hbm2ddl:
+      auto: create-drop
